# test-inforce

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
core/: asgi.py  settings.py  wsgi.py
core/api/: base_response.py  urls.py
core/api/v1/restaurant/: handlers.py
core/api/v1/users/: handlers.py
core/apps/common/: config.py  exception.py  models.py
core/apps/common/dependencies/: user_model.py
core/apps/restaurant/: admin.py  apps.py  config.py
core/apps/restaurant/exceptions/: base.py  main.py
core/apps/restaurant/migrations/: 0001_initial.py  0002_initial.py  0003_alter_restaurant_created_at_and_more.py  0004_alter_employee_options_employee_created_at_and_more.py  0005_menuview.py
core/apps/restaurant/models/: restaurant.py
core/apps/restaurant/serializers/: main.py
core/apps/restaurant/services/: base.py  main.py
core/apps/restaurant/use_cases/: main.py
core/apps/restaurant/utils/: main.py
core/apps/users/: admin.py  apps.py  config.py
core/apps/users/excaptions/: base.py  main.py
core/apps/users/migrations/: 0001_initial.py
core/apps/users/models/: user.py  users.py
core/apps/users/serializers/: main.py
core/apps/users/services/: base.py  main.py
core/apps/users/use_cases/: main.py
core/infrastructure/di/: main.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py  specific.py
docker_compose/: app.yaml
staticfiles/: staticfiles.json
tests/unit/: fixtures.py
(+2 files in other folders)
