[project]
name = "inforce"
version = "0.1.0"
description = "Test Inforce - API Restaurant"
authors = [
    {name = "Rybakov Artem Oleekseevich",email = "vp41919@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
